--- a/app/assets/stylesheets/partials/_site.scss
+++ b/app/assets/stylesheets/partials/_site.scss
@@ -1,12 +1,17 @@
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    font-size:62.5%;  /* =10px (Easy to do REM math)*/
+}
 
 body {
   background-image:image-url("concrete_seamless.png");
   background-repeat: repeat;
-}
-
-html,body{
-    height: 100%;
 }
 
 #common-background-wrap{
@@ -26,9 +31,9 @@ html,body{
 }
 
 @include media-query($on-laptop) {
-    #common-background-wrap{
-        width:98%;
-    }
+  #common-background-wrap{
+      width:98%;
+  }
 }
 
 #page-content{
